// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerLogo (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <a class="_logoContainer_1tdet_1 _logoAsLink_1tdet_7"
     href="https://www.skatteetaten.no/"
  >
    <img class="_logo_mobile_1tdet_16"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
    <img class="_logo_desktop_1tdet_19"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerLogo (intern) WithAs play-test 1`] = `
<div data-test-block="true">
  <div class="_logoContainer_1tdet_1">
    <img class="_logo_mobile_1tdet_16"
         alt="Skatteetaten logo"
         src="[REMOVED]"
    >
    <img class="_logo_desktop_1tdet_19"
         alt="Skatteetaten logo"
         src="[REMOVED]"
    >
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLogo (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <a id="htmlId"
     class="dummyClassname _logoContainer_1tdet_1 _logoAsLink_1tdet_7"
     lang="en"
     data-testid="123ID"
     href="https://www.skatteetaten.no/"
  >
    <img class="_logo_mobile_1tdet_16"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
    <img class="_logo_desktop_1tdet_19"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerLogo (intern) WithBreakpointM smoke-test 1`] = `
<div data-test-block="true">
  <a class="_logoContainer_1tdet_1 _logoAsLink_1tdet_7"
     href="https://www.skatteetaten.no/"
  >
    <img class="_logo_mobile_1tdet_16"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
    <img class="_logo_desktop_1tdet_19"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerLogo (intern) WithLogoMobileLogoAltAndHref play-test 1`] = `
<div data-test-block="true">
  <a class="_logoContainer_1tdet_1 _logoAsLink_1tdet_7"
     href="#"
  >
    <img class="_logo_mobile_1tdet_16"
         alt="custom alt text"
         src="[REMOVED]"
    >
    <img class="_logo_desktop_1tdet_19"
         alt="custom alt text"
         src="[REMOVED]"
    >
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerLogo (intern) WithMobileScreen smoke-test 1`] = `
<div data-test-block="true">
  <a class="_logoContainer_1tdet_1 _logoAsLink_1tdet_7"
     href="https://www.skatteetaten.no/"
  >
    <img class="_logo_mobile_1tdet_16"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
    <img class="_logo_desktop_1tdet_19"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerLogo (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <a class="_logoContainer_1tdet_1 _logoAsLink_1tdet_7"
     href="https://www.skatteetaten.no/"
     id="dummyIdForwardedFromRef"
  >
    <img class="_logo_mobile_1tdet_16"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
    <img class="_logo_desktop_1tdet_19"
         alt="Forside Skatteetaten"
         src="[REMOVED]"
    >
  </a>
</div>
`;
